ONS-835 fix contrast error (#301)

--- a/site/src/styles/fonts.css
+++ b/site/src/styles/fonts.css
@@ -146,7 +146,7 @@
   font-stretch: normal;
   line-height: normal;
   letter-spacing: normal;
-  color: #878787;
+  color: #727272;
 }
 .Tablist-heading-Style {
   font-family: Open Sans;
